Change site title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Terrain generated wit Mid-Point technique</title>
+    <title>2d shooter with parallax background, terrain generated wit Mid-Point technique</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body style="text-align:center;">
